# godot-cpp-docker

./: Containerfile  LICENSE  README.md  entrypoint.sh
cmake/: zig_common.cmake  zig_linux64.cmake  zig_win64.cmake
examples/hello_world/: CMakeLists.txt  CMakePresets.json
examples/hello_world/gdextension/: CMakeLists.txt  gdextension.cpp  gdextension.gdextension
